Fixed Double Scroll Bug

--- a/public/css/transfer.css
+++ b/public/css/transfer.css
@@ -10,8 +10,7 @@ html {
   font-weight: 300;
   font-size: 62.5%;
   list-style: none;
-  color: #fff;
-  overflow-x: hidden; }
+  color: #fff; }
 
 body {
   font-size: 2rem;
