--- a/public/sass/base/base.scss
+++ b/public/sass/base/base.scss
@@ -14,7 +14,6 @@ html {
   font-size: 62.5%;
   list-style: none;
   color: $base-color;
-  overflow-x: hidden;
 }
 body {
   font-size: 2rem;
